# LLM_Service_with_LangChain

./: pyproject.toml
.junie/: guidelines.md
Data/: glove.6B.100d.txt  glove.6B.100d.txt.word2vec
LLM_practice/: ai_code_assistant_test.py  data_connection_test.py  embedding_test.py  glove_test.py  jupyter_test.ipynb  llm_agent_test.py  llm_chain_test.py  llm_cvs_test.py  llm_mail_test.py  llm_pdf_summary_test.py  llm_rag_chat_test.py  llm_rag_pdf_test.py  llm_translator_test.py  model_io_hf_test.py  model_io_openai_test.py  openai_embedding_test.py  rag_chatbot_test.py  temperature_test.py
docs/: memo.md
실습/4장/: 데이터_연결(Data_Connection)_아나콘다.ipynb  데이터_연결(Data_Connection)_코랩.ipynb  메모리(Memory)_아나콘다.ipynb  메모리(Memory)_코랩.ipynb  모델_I_O_(Model_I_O)_아나콘다.ipynb  모델_I_O_(Model_I_O)_코랩.ipynb  에이전트_아나콘다.ipynb  에이전트_코랩.ipynb  체인(Chain)_아나콘다.ipynb  체인(Chain)_코랩.ipynb
실습/5장/: 5_2_랭체인과_챗GPT로_RAG_구현하기.ipynb
