[project]
name = "llm-service-with-langchain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.3",
    "huggingface-hub>=0.33.4",
    "langchain>=0.0.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "notebook>=7.4.4",
    "openai>=1.97.0",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
