[project]
name = "llm-service-with-langchain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.15",
    "faiss-cpu>=1.11.0.post1",
    "gensim>=4.3.3",
    "huggingface-hub>=0.33.4",
    "langchain>=0.0.27",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "notebook>=7.4.4",
    "numexpr>=2.11.0",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "pypdf>=5.8.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.40.1",
    "streamlit-chat>=0.1.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "torchvision>=0.22.1",
    "unstructured>=0.18.11",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
